--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.26",
     "expo-font": "~12.0.9",
+    "expo-image": "^1.12.15",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -35,6 +37,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
     "react-native-unistyles": "^2.9.2",
     "react-native-web": "~0.19.10",
     "zustand": "^4.5.5"
