--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "prebuild": "expo prebuild --clean",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-menu/menu": "^1.1.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "babel-plugin-inline-import": "^3.0.0",
@@ -39,6 +41,8 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ios-context-menu": "^2.5.1",
+    "react-native-ios-utilities": "^4.5.0",
     "react-native-keyboard-controller": "^1.13.4",
     "react-native-mmkv": "2.12.2",
     "react-native-reanimated": "~3.10.1",
@@ -47,6 +51,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-unistyles": "^2.9.2",
     "react-native-web": "~0.19.10",
+    "zeego": "^1.10.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
