--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.26",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "^1.12.15",
     "expo-linear-gradient": "^13.0.2",
