--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-menu/menu": "^1.1.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.59.20",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.33.0",
     "expo": "~51.0.28",
@@ -52,6 +53,7 @@
     "react-native-svg": "^15.6.0",
     "react-native-unistyles": "^2.9.2",
     "react-native-web": "~0.19.10",
+    "text-encoding-polyfill": "^0.6.7",
     "zeego": "^1.10.0",
     "zustand": "^4.5.5"
   },
